--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    width: 100%;
+    font-family: "poppins", sans-serif;
+}
+.App {
+  text-align: center;
+}
+.main{
+  margin-top: 10px;
+}
+.foodCantainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 15px;
+}
+
+.foodCard {
+    width: 49%;
+    display: flex;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.imgdiv {
+    width: 50%;
+}
+
+img {
+    width: 100%;
+}
+
+.first-column {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.inner-area {
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
