--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 .main{
   margin-top: 10px;
 }
-.foodCantainer {
+.foodContainer {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -28,7 +28,7 @@ body {
     border: 2px solid black;
     border-radius: 10px;
     padding: 20px;
-}
+  }
 
 .imgdiv {
     width: 50%;
@@ -36,6 +36,7 @@ body {
 
 img {
     width: 100%;
+    height: 80%;
 }
 
 .first-column {
@@ -50,3 +51,5 @@ img {
     flex-direction: column;
     gap: 20px;
 }
+
+
